Updated calculator functionality/style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calculator" id="display">
       <div>
-      <input type="text" id="result" readonly >
+      <input type="text" id="result" readonly aria-label="Calculator Display">
       </div>
   <div class="line">
   <button onclick="appendValue('1')">1</button>
