--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width" >
     <meta http-equiv="refresh" content="url=http://calculator/a.html">
     <title>CALCULATOR</title>
-    
-    <link rel="stylesheet" href="a.css">  
-   
+    <link rel="stylesheet" href="./styles.css">  
 </head>
 <body>
     <div class="calculator" id="display">
